--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         Ready to dress up or down, these classic canvas Chucks are an everyday
         wardrobel
       </p>
-      <a href="#"><u>More information → </u></a>
+      <a href="./pages/more_information.html"><u>More information → </u></a>
     </article>
     <aside>
       <h3>Product details</h3>
@@ -32,13 +32,16 @@
         <li>Iconic Chuck Taylor ankle patch</li>
       </ul>
       <button>
-        <a href="#">Add to cart</a>
+        <a href="./pages/Add_to_cart.html">Add to cart</a>
       </button>
       <footer>
         <p>
-          <a href="#">This FrontEnd Assingement-1 Work</a>
-          <a href="#">for more please visit our Git Hub page</a>
+          This FrontEnd Assingement-1 Work
+          <a href="https://github.com/gauravshankarkumar" target="-blank"
+            >for more please visit our Git Hub page</a
+          >
         </p>
+        <p>Thank you for visiting 🙏</p>
         <p>by @ GAURAV SHANKAR KUMAR</p>
       </footer>
     </aside>
