--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       </button>
       <footer>
         <p>
-          This FrontEnd Assingement-1 Work
+          This is FrontEnd Assingement-1
           <a href="https://github.com/gauravshankarkumar" target="-blank"
             >for more please visit our Git Hub page</a
           >
