--- a/index.html
+++ b/index.html
@@ -4,47 +4,52 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>FrontEnd Assingement-1</title>
+    <title>FrontEnd Assingement</title>
     <link rel="stylesheet" href="./styles/style.css" />
   </head>
   <body>
-    <header>
-      <h1>Converse Chuck Taylor ALL Star Low Top</h1>
-    </header>
-    <img
-      src="./assests/images/challenges.jpg"
-      width="300"
-      alt="Black and white Casual Shoe"
-    />
-    <article>
-      <h2>₹​ 65.00</h2>
-      <p>Free shipping</p>
-      <p>
-        Ready to dress up or down, these classic canvas Chucks are an everyday
-        wardrobel
-      </p>
-      <a href="./pages/more_information.html"><u>More information → </u></a>
-    </article>
-    <aside>
-      <h3>Product details</h3>
-      <ul>
-        <li>Lightweight, durable canvas sneaker</li>
-        <li>Lightly padded footbed for added comfort</li>
-        <li>Iconic Chuck Taylor ankle patch</li>
-      </ul>
-      <button>
-        <a href="./pages/Add_to_cart.html" class="cart">Add to cart</a>
-      </button>
-      <footer>
+    <nav>
+      <header>
+        <h1>Converse Chuck Taylor ALL Star Low Top</h1>
+      </header>
+      <img
+        class="img"
+        src="./assests/images/challenges.jpg"
+        alt="Black and white Casual Shoe"
+      />
+      <article>
+        <h2>₹​ 65.00</h2>
+        <p>Free shipping</p>
         <p>
-          This is FrontEnd Assingement-1
-          <a href="https://github.com/gauravshankarkumar" target="-blank"
-            >for more please visit our Git Hub page</a
-          >
+          
+      </article>
+      <section>
+        Ready to dress up or down, these classic canvas Chucks are an everyday
+          wardrobel staple.
         </p>
-        <p>Thank you for visiting 🙏</p>
-        <p>by @ GAURAV SHANKAR KUMAR</p>
-      </footer>
-    </aside>
+        <a href="./pages/more_information.html"><u>More information → </u></a>
+      </section>
+      <aside>
+        <h3>Product details</h3>
+        <ul>
+          <li>Lightweight, durable canvas sneaker</li>
+          <li>Lightly padded footbed for added comfort</li>
+          <li>Iconic Chuck Taylor ankle patch</li>
+        </ul>
+        <button class="button">
+          <a href="./pages/Add_to_cart.html" class="cart">Add to cart</a>
+        </button>
+        <footer>
+          <p>
+            This is FrontEnd Assingement-1
+            <a href="https://github.com/gauravshankarkumar" target="-blank"
+              >for more please visit our Git Hub page</a
+            >
+          </p>
+          <p>Thank you for visiting 🙏</p>
+          <p>by @ GAURAV SHANKAR KUMAR</p>
+        </footer>
+      </aside>
+    </nav>
   </body>
 </html>
