Assingnment-4 1. Color Box 2. Position (absolute, relative, fixed)

--- a/index.html
+++ b/index.html
@@ -27,7 +27,13 @@
         Ready to dress up or down, these classic canvas Chucks are an everyday
           wardrobel staple.
         </p>
-        <a href="./pages/more_information.html"><u>More information → </u></a>
+        <p><a href="./pages/more_information.html"><u>More information → </u></a></p>
+        <div class="black"> </div>
+        <div class="blue"> </div>
+        <div class="red"> </div>
+        <div class="yellow"> </div>
+        <div class="lite-green"> </div>
+        <div class="brown"> </div>
       </section>
       <aside>
         <h3>Product details</h3>
@@ -41,7 +47,7 @@
         </button>
         <footer>
           <p>
-            This is FrontEnd Assingement-1
+            This is FrontEnd Assingement
             <a href="https://github.com/gauravshankarkumar" target="-blank"
               >for more please visit our Git Hub page</a
             >
@@ -50,6 +56,8 @@
           <p>by @ GAURAV SHANKAR KUMAR</p>
         </footer>
       </aside>
+      <button class="sale">SALE</button>
     </nav>
+    
   </body>
 </html>
