Assingement-5 1. Float (Left, Right)

--- a/index.html
+++ b/index.html
@@ -12,52 +12,68 @@
       <header>
         <h1>Converse Chuck Taylor ALL Star Low Top</h1>
       </header>
-      <img
-        class="img"
-        src="./assests/images/challenges.jpg"
-        alt="Black and white Casual Shoe"
-      />
       <article>
-        <h2>₹​ 65.00</h2>
-        <p>Free shipping</p>
-        <p>
-          
-      </article>
-      <section>
-        Ready to dress up or down, these classic canvas Chucks are an everyday
-          wardrobel staple.
-        </p>
-        <p><a href="./pages/more_information.html"><u>More information → </u></a></p>
-        <div class="black"> </div>
-        <div class="blue"> </div>
-        <div class="red"> </div>
-        <div class="yellow"> </div>
-        <div class="lite-green"> </div>
-        <div class="brown"> </div>
-      </section>
-      <aside>
-        <h3>Product details</h3>
-        <ul>
-          <li>Lightweight, durable canvas sneaker</li>
-          <li>Lightly padded footbed for added comfort</li>
-          <li>Iconic Chuck Taylor ankle patch</li>
-        </ul>
-        <button class="button">
-          <a href="./pages/Add_to_cart.html" class="cart">Add to cart</a>
-        </button>
-        <footer>
+        <img
+          class="img"
+          src="./assests/images/challenges.jpg"
+          alt="Black and white Casual Shoe"
+        />
+        <section>
+          <h2 class="price">₹​ 65.00</h2>
+          <p class="free">Free shipping</p>
+
+          <p class="ready">
+            Ready to dress up or down, these classic canvas Chucks are an
+            everyday wardrobel staple.
+          </p>
           <p>
-            This is FrontEnd Assingement
-            <a href="https://github.com/gauravshankarkumar" target="-blank"
-              >for more please visit our Git Hub page</a
+            <a href="./pages/more_information.html" class="anchor"
+              >More information →</a
             >
           </p>
-          <p>Thank you for visiting 🙏</p>
-          <p>by @ GAURAV SHANKAR KUMAR</p>
-        </footer>
-      </aside>
+          <div class="black"></div>
+          <div class="blue"></div>
+          <div class="red"></div>
+          <div class="yellow"></div>
+          <div class="lite-green"></div>
+          <div class="brown"></div>
+        </section>
+        <aside>
+          <h3 class="details">Product details</h3>
+          <ul>
+            <li>Lightweight, durable canvas sneaker</li>
+            <li>Lightly padded footbed for added comfort</li>
+            <li>Iconic Chuck Taylor ankle patch</li>
+          </ul>
+        </aside>
+      </article>
+      <button class="button">
+        <a href="./pages/Add_to_cart.html" class="cart">Add to cart</a>
+      </button>
       <button class="sale">SALE</button>
     </nav>
-    
+    <footer>
+      <p class="this">
+        This is FrontEnd Assingement
+        <a
+          href="https://github.com/gauravshankarkumar"
+          target="-blank"
+          class="git"
+          class="anchor"
+          >for more please visit our Git Hub page</a
+        >
+        Thank you for visiting 🙏
+      </p>
+      <p class="by">
+        by @
+        <a
+          href="https://www.linkedin.com/in/gauravshankarkumar/"
+          target="-blank"
+          class="gsk"
+          class="anchor"
+          >GAURAV SHANKAR KUMAR</a
+        >
+      </p>
+    </footer>
   </body>
 </html>
